# idigital-python-integration

./: .gitignore  LICENSE  README.md  pyproject.toml
idigital_python_integration/: IDigital.py
idigital_python_integration/classes/: IDigitalAccessToken.py  IDigitalConfig.py  IDigitalDiscovery.py  IDigitalException.py  IDigitalHelp.py  IDigitalHttp.py  IDigitalIDToken.py  IDigitalMessage.py  IDigitalSession.py  IDigitalToken.py
